--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Jeroen Sannen</h1>
-								<p><!--[-->Experience Designer (on git bitchazzz)<!--]--></p>
+								<p><!--[-->Experience Designer<!--]--></p>
 							</div>
 						</div>
 						<nav>
