--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 						<!-- About -->
 							<article id="News">
 								<h2 class="major">News</h2>
-								<a class="twitter-timeline" href="https://twitter.com/Geronimo206" data-widget-id="738688378259050496" width="100%" data-width="100%" data-tweet-limit="20" data-chrome="noheader nofooter noborders transparent">Tweets by @Geronimo206</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+								<a class="twitter-timeline" href="https://twitter.com/Geronimo206?ref_src=twsrc%5Etfw">Tweets by Geronimo206</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 								<hr />
 								<ul class="actions">
 									<li><a href="#" class="button icon fa-arrow-left">Back</a></li>
@@ -422,7 +422,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright"><a href="https://www.youtube.com/watch?v=lqq3BtGrpU8" target="_blank">Everybody's singing the same song</a></p>
+						<p class="copyright"><a href="https://www.youtube.com/watch?v=3NPATRzaF00" target="_blank">Art gets what it wants and art gets what it deserves</a></p>
 						<ul class="icons">
 							<li><a href="mailto:jeroensannen@hotmail.com?Subject=Hey%20Jeroen!" class="icon fa-envelope" title="Mail"><span class="label">Mail</span></a></li>
 							<li><a href="tel:0032472970583" class="icon fa-phone" title="Phone"><span class="label">Phone</span></a></li>
@@ -434,7 +434,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							<li><a href="http://www.last.fm/user/Geronimo206" class="icon fa-lastfm" target="_blank" title="Last.fm"><span class="label">Last.fm</span></a></li>
 							<li><a href="http://www.trakt.tv/users/geronimo206" class="icon fa-television" target="_blank" title="Trakt.tv"><span class="label">Trakt.tv</span></a></li>
 							<li><a href="http://www.soundcloud.com/geronimo206" class="icon fa-soundcloud" target="_blank" title="Soundcloud"><span class="label">Soundcloud</span></a></li>
-							<li><a href="https://www.facebook.com/BeachvolleybalteamSannenHoeyberghs" class="icon fa-sun-o" target="_blank" title="Beachvolley"><span class="label">Beachvolleybalteam</span></a></li>
+							<li><a href="https://www.facebook.com/BeachvolleybalteamSannenTorfs" class="icon fa-sun-o" target="_blank" title="Beachvolley"><span class="label">Beachvolleybalteam</span></a></li>
 						</ul>
 					</footer>
 
