--- a/index.html
+++ b/index.html
@@ -74,14 +74,15 @@
 						<!-- Work -->
 							<article id="Work">
 								<h2 class="major">My Work</h2>
-								<p>With around 10 years of experience in web development and graphic design and more then 7 years of hands-on experience in User Experience Design, I'm working my way up to become a real <strong>jack of all trades</strong>. I'm currently fulltime employed as UX consultant for <a href="http://www.continuous.be" target="_blank">Continuous</a>. On this page you can see a <strong>summary</strong> of some of my more exciting projects.</p>
+								<p>With around 13 years of experience in web development and graphic design and more then 9 years of hands-on experience in User Experience Design, I'm working my way up to become a real <strong>jack of all trades</strong>. I'm currently fulltime employed as UX consultant for <a href="http://www.continuous.be" target="_blank">Continuous</a>. On this page you can see a <strong>summary</strong> of some of my more exciting projects.</p>
 								<hr />
-								<h3>Complete VDAB Style Guide</h3>
+								<h3>Helping the digital revolution at VDAB</h3>
 								<span class="image main"><img src="images/vdabhuisstijl.jpg" alt="Complete VDAB Style Guide" title="Complete VDAB Style Guide" /></span>
 								<p>VDAB is a digital first government institution that guides people in their search for a job. This digital first strategy requires a <strong>unified style for all web and internal applications</strong>. Using the magic of HTML/CSS/JQuery and responsive design I help plan, create and maintain the ultimate reference for all VDAB applications. While at VDAB I also help to mock up, analyse and test a lot of applications to improve their usability.</p>
 								<h4>Let me show you:</h4>
 								<ul>
-									<li>Big parts of the <a href="https://www.vdab.be" target="_blank">VDAB website</a> allready employ these new style guidelines.</li>
+									<li>Read <a href="https://www.rmdy.be/interview-jeroen-helpt-vdab-naar-de-digitale-revolutie/" target="_blank">this awesome interview</a> (it's in dutch) to find out more about my work at VDAB.</li>
+									<li>Big parts of the <a href="https://www.vdab.be" target="_blank">VDAB website</a> employ my new style guidelines.</li>
 									<li>I front-ended the highly used <a href="https://www.vdab.be/opleidingen/aanbod" target="_blank">VDAB Opleidingen gids</a>.</li>
 									<li>The <a href="https://www.vdab.be/orientering" target="_blank">VDAB Orientering</a> application was mocked up by me.</li>
 									<li>The <a href="https://www.vdab.be/startpakket" target="_blank">VDAB Startpakket</a> application was based on this style guide.</li>
