--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 								<p>VDAB is a digital first government institution that guides people in their search for a job. This digital first strategy requires a <strong>unified style for all web and internal applications</strong>. Using the magic of HTML/CSS/JQuery and responsive design I help plan, create and maintain the ultimate reference for all VDAB applications. While at VDAB I also help to mock up, analyse and test a lot of applications to improve their usability.</p>
 								<h4>Let me show you:</h4>
 								<ul>
-									<li>Read <a href="https://www.rmdy.be/interview-jeroen-helpt-vdab-naar-de-digitale-revolutie/" target="_blank">this awesome interview</a> (it's in dutch) to find out more about my work at VDAB.</li>
-									<li>Big parts of the <a href="https://www.vdab.be" target="_blank">VDAB website</a> employ my new style guidelines.</li>
+									<li>Read <a href="https://www.rmdy.be/interview-jeroen-helpt-vdab-naar-de-digitale-revolutie/" target="_blank">this awesome interview</a> (in dutch) about my work at VDAB.</li>
+									<li>I had a hand in big parts of the <a href="https://www.vdab.be" target="_blank">VDAB website</a>.</li>
 									<li>I front-ended the highly used <a href="https://www.vdab.be/opleidingen/aanbod" target="_blank">VDAB Opleidingen gids</a>.</li>
 									<li>The <a href="https://www.vdab.be/orientering" target="_blank">VDAB Orientering</a> application was mocked up by me.</li>
 									<li>The <a href="https://www.vdab.be/startpakket" target="_blank">VDAB Startpakket</a> application was based on this style guide.</li>
@@ -435,7 +435,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							<li><a href="http://www.last.fm/user/Geronimo206" class="icon fa-lastfm" target="_blank" title="Last.fm"><span class="label">Last.fm</span></a></li>
 							<li><a href="http://www.trakt.tv/users/geronimo206" class="icon fa-television" target="_blank" title="Trakt.tv"><span class="label">Trakt.tv</span></a></li>
 							<li><a href="http://www.soundcloud.com/geronimo206" class="icon fa-soundcloud" target="_blank" title="Soundcloud"><span class="label">Soundcloud</span></a></li>
-							<li><a href="https://www.facebook.com/BeachvolleybalteamSannenTorfs" class="icon fa-sun-o" target="_blank" title="Beachvolley"><span class="label">Beachvolleybalteam</span></a></li>
+							<li><a href="https://www.facebook.com/BeachvolleybalteamSannenTorfs" class="icon fa-sun-o" target="_blank" title="Beachvolley"><span class="label">Beachvolleybalteam Sannen - Torfs</span></a></li>
 						</ul>
 					</footer>
 
