--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 									<li><a href="https://www.qframe.be" target="_blank">qframe.be</a>, a recent website I created.</li>
 									<li><a href="https://www.feniksafwerkingsbedrijf.be" target="_blank">feniksafwerkingsbedrijf.be</a>, a recent smaller creation.</li>
 									<li><a href="https://www.resaleright.be" target="_blank">resaleright.be</a>, a website for SABAM.</li>
-									<li><a href="https://skillsbadge.be">skillsbadge.be</a>, a website for the Flemish Government.</li>
+									<li><a href="https://skillsbadge.be" target="_blank">skillsbadge.be</a>, a website for the Flemish Government.</li>
 									<li><a href="https://www.kadaster.be" target="_blank">kadaster.be</a> and <a href="https://www.livios.be" target="_blank">livios.be</a>, websites I worked on in the past.</li>
 								</ul>
 								<hr />
