--- a/indoorbeach/index.html
+++ b/indoorbeach/index.html
@@ -61,7 +61,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Zondag 13 oktober Duffel</h2>
+										<h2>Zondag 13 oktober Schaffen</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -72,7 +72,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Zondag 13 oktober Duffel</h2>
+										<h2>Zondag 27 oktober Duffel</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -83,7 +83,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Zondag 13 oktober Duffel</h2>
+										<h2>Zondag 10 november Schaffen</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -94,7 +94,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Zondag 13 oktober Duffel</h2>
+										<h2>Zondag 24 november Duffel</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -105,7 +105,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Zondag 13 oktober Duffel</h2>
+										<h2>Zondag 8 december Schaffen</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -116,7 +116,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Zondag 13 oktober Duffel</h2>
+										<h2>Zondag 22 december Duffel</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -127,7 +127,7 @@
 										<img src="images/pic07.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Zondag 13 oktober Duffel</h2>
+										<h2>Zondag 12 januari Schaffen</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -138,7 +138,7 @@
 										<img src="images/pic08.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Zondag 13 oktober Duffel</h2>
+										<h2>Zondag 26 januari Duffel</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -149,7 +149,7 @@
 										<img src="images/pic09.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Zondag 13 oktober Duffel</h2>
+										<h2>Zondag 9 februari Schaffen</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -160,7 +160,7 @@
 										<img src="images/pic10.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Zondag 13 oktober Duffel</h2>
+										<h2>Zondag 23 februari Duffel</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -171,7 +171,7 @@
 										<img src="images/pic11.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Zondag 13 oktober Duffel</h2>
+										<h2>Zondag 8 maart Schaffen</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -182,7 +182,7 @@
 										<img src="images/pic12.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Zondag 13 oktober Duffel</h2>
+										<h2>Zondag 22 maart Duffel</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
