--- a/indoorbeach/index.html
+++ b/indoorbeach/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Phantom by HTML5 UP</title>
+		<title>Belgium Winter Beachvolley 2019 - 2020</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Belgium Winter Beachvolley 2019 - 2020</span>
 								</a>
 
 							<!-- Nav -->
@@ -51,9 +51,9 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>This is Phantom, a free, fully responsive site<br />
-								template designed by <a href="http://html5up.net">HTML5 UP</a>.</h1>
-								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p>
+								<h1>Belgium Winter Beachvolley is een volwaardige indoor beachvolleybal competitie<br />
+								voor spelers van Belgisch, provinciaal en recreatief niveau.</h1>
+								<p>Elke 2de en 4de zondag van de maand organiseren we, verspreid over 2 unieke indoor beachvolleybal accomocaties in België, een "Heren Belgisch/provinciaal", een "Dames Belgisch/provinciaal" en een "Gemengd Recreatief" reeks</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
@@ -61,7 +61,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Zondag 13 oktober Schaffen</h2>
+										<h2>13 oktober Schaffen</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -72,7 +72,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Zondag 27 oktober Duffel</h2>
+										<h2>27 oktober Duffel</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -83,7 +83,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Zondag 10 november Schaffen</h2>
+										<h2>10 november Schaffen</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -94,7 +94,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Zondag 24 november Duffel</h2>
+										<h2>24 november Duffel</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -105,7 +105,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Zondag 8 december Schaffen</h2>
+										<h2>8 december Schaffen</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -116,7 +116,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Zondag 22 december Duffel</h2>
+										<h2>22 december Duffel</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -127,7 +127,7 @@
 										<img src="images/pic07.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Zondag 12 januari Schaffen</h2>
+										<h2>12 januari Schaffen</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -138,7 +138,7 @@
 										<img src="images/pic08.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Zondag 26 januari Duffel</h2>
+										<h2>26 januari Duffel</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -149,7 +149,7 @@
 										<img src="images/pic09.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Zondag 9 februari Schaffen</h2>
+										<h2>9 februari Schaffen</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -160,7 +160,7 @@
 										<img src="images/pic10.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Zondag 23 februari Duffel</h2>
+										<h2>23 februari Duffel</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -171,7 +171,7 @@
 										<img src="images/pic11.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Zondag 8 maart Schaffen</h2>
+										<h2>8 maart Schaffen</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -182,7 +182,7 @@
 										<img src="images/pic12.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Zondag 22 maart Duffel</h2>
+										<h2>22 maart Duffel</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
