--- a/indoorbeach/index.html
+++ b/indoorbeach/index.html
@@ -51,9 +51,9 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Belgium Winter Beachvolley is een volwaardige indoor beachvolleybal competitie<br />
-								voor spelers van Belgisch, provinciaal en recreatief niveau.</h1>
-								<p>Elke 2de en 4de zondag van de maand organiseren we, verspreid over 2 unieke indoor beachvolleybal accomocaties in België, een "Heren Belgisch/provinciaal", een "Dames Belgisch/provinciaal" en een "Gemengd Recreatief" reeks</p>
+								<h1>Belgium Winter Beachvolley is een volwaardige indoor beachvolleybal competitie voor spelers van Belgisch, provinciaal en recreatief niveau.</h1>
+								<p>Elke 2de en 4de zondag van de maand organiseren we, verspreid over 2 unieke indoor beachvolleybal accomocaties in België, een <strong>"Heren Belgisch/provinciaal"</strong>, een <strong>"Dames Belgisch/provinciaal"</strong> en een <strong>"Gemengd Recreatief"</strong> reeks. 
+									Voor een <strong>erg scherpe prijs</strong> speel je in elke reeks zeker 3 en vaak 4 volledige wedstrijden.</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
@@ -63,7 +63,9 @@
 									<a href="generic.html">
 										<h2>13 oktober Schaffen</h2>
 										<div class="content">
-											<p>Heren Pro, Dames Pro en Recreatief</p>
+											<p>10:00u Gemengd Recreatief<br>
+											13:00u Dames BEL/prov<br>
+											13:00u Heren BEL/prov</p>
 										</div>
 									</a>
 								</article>
