--- a/indoorbeach/index.html
+++ b/indoorbeach/index.html
@@ -52,7 +52,7 @@
 						<div class="inner">
 							<header>
 								<h1>Belgium Winter Beachvolley is een volwaardige indoor beachvolleybal competitie voor spelers van Belgisch, provinciaal en recreatief niveau.</h1>
-								<p>Elke 2de en 4de zondag van de maand organiseren we, verspreid over 2 unieke indoor beachvolleybal accomocaties in België, een <strong>"Heren Belgisch/provinciaal"</strong>, een <strong>"Dames Belgisch/provinciaal"</strong> en een <strong>"Gemengd Recreatief"</strong> reeks. 
+								<p>Elke 2de en 4de zondag van de maand organiseren we, verspreid over 2 unieke indoor beachvolleybal accomocaties in België, een <strong>Heren Belgisch/provinciaal</strong>, een <strong>Dames Belgisch/provinciaal</strong> en een <strong>Gemengd Recreatief</strong> reeks. 
 									Voor een <strong>erg scherpe prijs</strong> speel je in elke reeks zeker 3 en vaak 4 volledige wedstrijden.</p>
 							</header>
 							<section class="tiles">
@@ -61,11 +61,12 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>13 oktober Schaffen</h2>
+										<h2>13 oktober</h2>
 										<div class="content">
-											<p>10:00u Gemengd Recreatief<br>
-											13:00u Dames BEL/prov<br>
-											13:00u Heren BEL/prov</p>
+											<p><span class="icon brands style2 fa-location">Schaffen</span>
+											10u Gemengd Recreatief<br>
+											13u Dames BEL/prov<br>
+											13u Heren BEL/prov</p>
 										</div>
 									</a>
 								</article>
