--- a/indoorbeach/index.html
+++ b/indoorbeach/index.html
@@ -63,7 +63,7 @@
 									<a href="generic.html">
 										<h2>13 oktober</h2>
 										<div class="content">
-											<p><span class="icon brands style2 fa-location">Schaffen</span>
+											<p><span class="icon fa-map-marker-alt"> Schaffen</span><br>
 											10u Gemengd Recreatief<br>
 											13u Dames BEL/prov<br>
 											13u Heren BEL/prov</p>
@@ -75,7 +75,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>27 oktober Duffel</h2>
+										<h2>27 oktober</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -86,7 +86,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>10 november Schaffen</h2>
+										<h2>10 november</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -97,7 +97,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>24 november Duffel</h2>
+										<h2>24 november</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -108,7 +108,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>8 december Schaffen</h2>
+										<h2>8 december</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -119,7 +119,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>22 december Duffel</h2>
+										<h2>22 december</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -130,7 +130,7 @@
 										<img src="images/pic07.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>12 januari Schaffen</h2>
+										<h2>12 januari</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -141,7 +141,7 @@
 										<img src="images/pic08.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>26 januari Duffel</h2>
+										<h2>26 januari</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -152,7 +152,7 @@
 										<img src="images/pic09.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>9 februari Schaffen</h2>
+										<h2>9 februari</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -163,7 +163,7 @@
 										<img src="images/pic10.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>23 februari Duffel</h2>
+										<h2>23 februari</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -174,7 +174,7 @@
 										<img src="images/pic11.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>8 maart Schaffen</h2>
+										<h2>8 maart</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
@@ -185,7 +185,7 @@
 										<img src="images/pic12.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>22 maart Duffel</h2>
+										<h2>22 maart</h2>
 										<div class="content">
 											<p>Heren Pro, Dames Pro en Recreatief</p>
 										</div>
