--- a/indoorbeach/index.html
+++ b/indoorbeach/index.html
@@ -63,7 +63,7 @@
 									<a href="generic.html">
 										<h2>13 oktober</h2>
 										<div class="content">
-											<p><span class="icon fa-map-marker-alt"> Schaffen</span><br>
+											<p><strong>Zelemseweg 124, 3290 Diest</strong><br>
 											10u Gemengd Recreatief<br>
 											13u Dames BEL/prov<br>
 											13u Heren BEL/prov</p>
@@ -77,7 +77,10 @@
 									<a href="generic.html">
 										<h2>27 oktober</h2>
 										<div class="content">
-											<p>Heren Pro, Dames Pro en Recreatief</p>
+											<p><strong>Naalstraat 43C, 2570 Duffel</strong><br>
+											10u Gemengd Recreatief<br>
+											13u Dames BEL/prov<br>
+											13u Heren BEL/prov</p>
 										</div>
 									</a>
 								</article>
