--- a/indoorbeach/index.html
+++ b/indoorbeach/index.html
@@ -63,7 +63,7 @@
 									<a href="generic.html">
 										<h2>13 oktober</h2>
 										<div class="content">
-											<p><strong>Zelemseweg 124, 3290 Diest</strong><br>
+											<p><strong>Outdoorcentrum Schaffen<br>Zelemseweg 124, 3290 Diest</strong><br>
 											10u Gemengd Recreatief<br>
 											13u Dames BEL/prov<br>
 											13u Heren BEL/prov</p>
@@ -77,7 +77,7 @@
 									<a href="generic.html">
 										<h2>27 oktober</h2>
 										<div class="content">
-											<p><strong>Naalstraat 43C, 2570 Duffel</strong><br>
+											<p><strong>TC De Pollepel<br>Naalstraat 43C, 2570 Duffel</strong><br>
 											10u Gemengd Recreatief<br>
 											13u Dames BEL/prov<br>
 											13u Heren BEL/prov</p>
