--- a/indoorbeach/index.html
+++ b/indoorbeach/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Phantom by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Belgium Winter Beachvolley 2019 - 2020</title>
@@ -39,9 +34,9 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
+							<li><a href="index.html">Toernooien</a></li>
+							<li><a href="generic.html">Ranking 2019 - 2020</a></li>
+							<li><a href="generic.html">Over BWB</a></li>
 							<li><a href="generic.html">Consequat dolor</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
@@ -51,9 +46,10 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Belgium Winter Beachvolley is een volwaardige indoor beachvolleybal competitie voor spelers van Belgisch, provinciaal en recreatief niveau.</h1>
-								<p>Elke 2de en 4de zondag van de maand organiseren we, verspreid over 2 unieke indoor beachvolleybal accomocaties in België, een <strong>Heren Belgisch/provinciaal</strong>, een <strong>Dames Belgisch/provinciaal</strong> en een <strong>Gemengd Recreatief</strong> reeks. 
-									Voor een <strong>erg scherpe prijs</strong> speel je in elke reeks zeker 3 en vaak 4 volledige wedstrijden.</p>
+								<h1>Belgium Winter Beachvolley is een volwaardige indoor beachvolleybal competitie voor beachvolley freaks van Belgisch, provinciaal en recreatief niveau.</h1>
+								<p>Verspreid over 2 unieke indoor beachvolleybal accomocaties in België organiseren we elke 2de en 4de zondag van de maand een <strong>Heren BEL/prov</strong>, een <strong>Dames BEL/prov</strong> en een <strong>Gemengd Recreatief</strong> toernooi. 
+									Voor een <strong>erg scherpe prijs</strong> speel je in elke reeks <strong>zeker 3 volledige wedstrijden</strong> die perfect aansluiten bij het niveau dat je aangeeft.<br>
+								Klinkt tof? Kies je toernooien en <strong>Schrijf je in!</strong></p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
@@ -91,7 +87,10 @@
 									<a href="generic.html">
 										<h2>10 november</h2>
 										<div class="content">
-											<p>Heren Pro, Dames Pro en Recreatief</p>
+											<p><strong>Outdoorcentrum Schaffen<br>Zelemseweg 124, 3290 Diest</strong><br>
+												10u Gemengd Recreatief<br>
+												13u Dames BEL/prov<br>
+												13u Heren BEL/prov</p>
 										</div>
 									</a>
 								</article>
@@ -102,7 +101,10 @@
 									<a href="generic.html">
 										<h2>24 november</h2>
 										<div class="content">
-											<p>Heren Pro, Dames Pro en Recreatief</p>
+											<p><strong>TC De Pollepel<br>Naalstraat 43C, 2570 Duffel</strong><br>
+												10u Gemengd Recreatief<br>
+												13u Dames BEL/prov<br>
+												13u Heren BEL/prov</p>
 										</div>
 									</a>
 								</article>
@@ -113,7 +115,10 @@
 									<a href="generic.html">
 										<h2>8 december</h2>
 										<div class="content">
-											<p>Heren Pro, Dames Pro en Recreatief</p>
+											<p><strong>Outdoorcentrum Schaffen<br>Zelemseweg 124, 3290 Diest</strong><br>
+												10u Gemengd Recreatief<br>
+												13u Dames BEL/prov<br>
+												13u Heren BEL/prov</p>
 										</div>
 									</a>
 								</article>
@@ -124,7 +129,10 @@
 									<a href="generic.html">
 										<h2>22 december</h2>
 										<div class="content">
-											<p>Heren Pro, Dames Pro en Recreatief</p>
+											<p><strong>TC De Pollepel<br>Naalstraat 43C, 2570 Duffel</strong><br>
+												10u Gemengd Recreatief<br>
+												13u Dames BEL/prov<br>
+												13u Heren BEL/prov</p>
 										</div>
 									</a>
 								</article>
@@ -135,7 +143,10 @@
 									<a href="generic.html">
 										<h2>12 januari</h2>
 										<div class="content">
-											<p>Heren Pro, Dames Pro en Recreatief</p>
+											<p><strong>Outdoorcentrum Schaffen<br>Zelemseweg 124, 3290 Diest</strong><br>
+												10u Gemengd Recreatief<br>
+												13u Dames BEL/prov<br>
+												13u Heren BEL/prov</p>
 										</div>
 									</a>
 								</article>
@@ -146,7 +157,10 @@
 									<a href="generic.html">
 										<h2>26 januari</h2>
 										<div class="content">
-											<p>Heren Pro, Dames Pro en Recreatief</p>
+											<p><strong>TC De Pollepel<br>Naalstraat 43C, 2570 Duffel</strong><br>
+												10u Gemengd Recreatief<br>
+												13u Dames BEL/prov<br>
+												13u Heren BEL/prov</p>
 										</div>
 									</a>
 								</article>
@@ -157,7 +171,10 @@
 									<a href="generic.html">
 										<h2>9 februari</h2>
 										<div class="content">
-											<p>Heren Pro, Dames Pro en Recreatief</p>
+											<p><strong>Outdoorcentrum Schaffen<br>Zelemseweg 124, 3290 Diest</strong><br>
+												10u Gemengd Recreatief<br>
+												13u Dames BEL/prov<br>
+												13u Heren BEL/prov</p>
 										</div>
 									</a>
 								</article>
@@ -168,7 +185,10 @@
 									<a href="generic.html">
 										<h2>23 februari</h2>
 										<div class="content">
-											<p>Heren Pro, Dames Pro en Recreatief</p>
+											<p><strong>TC De Pollepel<br>Naalstraat 43C, 2570 Duffel</strong><br>
+												10u Gemengd Recreatief<br>
+												13u Dames BEL/prov<br>
+												13u Heren BEL/prov</p>
 										</div>
 									</a>
 								</article>
@@ -179,7 +199,10 @@
 									<a href="generic.html">
 										<h2>8 maart</h2>
 										<div class="content">
-											<p>Heren Pro, Dames Pro en Recreatief</p>
+											<p><strong>Outdoorcentrum Schaffen<br>Zelemseweg 124, 3290 Diest</strong><br>
+												10u Gemengd Recreatief<br>
+												13u Dames BEL/prov<br>
+												13u Heren BEL/prov</p>
 										</div>
 									</a>
 								</article>
@@ -190,7 +213,10 @@
 									<a href="generic.html">
 										<h2>22 maart</h2>
 										<div class="content">
-											<p>Heren Pro, Dames Pro en Recreatief</p>
+											<p><strong>TC De Pollepel<br>Naalstraat 43C, 2570 Duffel</strong><br>
+												10u Gemengd Recreatief<br>
+												13u Dames BEL/prov<br>
+												13u Heren BEL/prov</p>
 										</div>
 									</a>
 								</article>
@@ -234,7 +260,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Belgium Winter Beachvolley</li><li>Made by <a href="http://jeroensannen.be">JS</a></li>
 							</ul>
 						</div>
 					</footer>
