--- a/indoorbeach/index.html
+++ b/indoorbeach/index.html
@@ -48,15 +48,14 @@
 							<header>
 								<h1>Belgium Winter Beachvolley is een volwaardige indoor beachvolleybal competitie voor beachvolley freaks van Belgisch, provinciaal en recreatief niveau.</h1>
 								<p>Verspreid over 2 unieke indoor beachvolleybal accomocaties in België organiseren we elke 2de en 4de zondag van de maand een <strong>Heren BEL/prov</strong>, een <strong>Dames BEL/prov</strong> en een <strong>Gemengd Recreatief</strong> toernooi. 
-									Voor een <strong>erg scherpe prijs</strong> speel je in elke reeks <strong>zeker 3 volledige wedstrijden</strong> die perfect aansluiten bij het niveau dat je aangeeft.<br>
-								Klinkt tof? Kies je toernooien en <strong>Schrijf je in!</strong></p>
+									Voor een <strong>erg scherpe prijs</strong> speel je in elke reeks <strong>zeker 3 volledige wedstrijden</strong> die perfect aansluiten bij het niveau dat je aangeeft. Klinkt tof? Kies je toernooi(en) en <strong>Schrijf je nu in!</strong></p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="13-oktober.html">
 										<h2>13 oktober</h2>
 										<div class="content">
 											<p><strong>Outdoorcentrum Schaffen<br>Zelemseweg 124, 3290 Diest</strong><br>
