--- a/indoorbeach/13-oktober.html
+++ b/indoorbeach/13-oktober.html
@@ -1,9 +1,11 @@
 <!DOCTYPE HTML>
-<!--
-	Phantom by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+<style>
+    .wrap-class {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+</style>
 <html>
 	<head>
 		<title>13 oktober</title>
@@ -68,22 +70,22 @@
                                         </thead>
                                         <tbody>
                                             <tr>
-                                                <td>Heren BEL/prov</td>
+                                                <td class="wrap-class">Heren BEL/prov</td>
                                                 <td>Een stevige competitieve heren reeks voor spelers van Belgisch niveau en waaghalzen van divisie of provinciaal niveau. Je speelt veel wedstrijden, je kan een gratis deelname winnen voor het volgende toernooi en je kan punten verdienen voor de eindrangschikking van seizoen 2019 - 2020.</td>
-                                                <td>35 EUR</td>
-                                                <td><a href="">Schrijf in!</a></td>
+                                                <td class="wrap-class">35 EUR</td>
+                                                <td class="wrap-class"><a href="">Schrijf in!</a></td>
                                             </tr>
                                             <tr>
-                                                <td>Dames BEL/prov</td>
+                                                <td class="wrap-class">Dames BEL/prov</td>
                                                 <td>Een stevige competitieve dames reeks voor spelers van Belgisch niveau en waaghalzen van divisie of provinciaal niveau. Je speelt veel wedstrijden, je kan een gratis deelname winnen voor het volgende toernooi en je kan punten verdienen voor de eindrangschikking van seizoen 2019 - 2020.</td>
-                                                <td>35 EUR</td>
-                                                <td><a href="">Schrijf in!</a></td>
+                                                <td class="wrap-class">35 EUR</td>
+                                                <td class="wrap-class"><a href="">Schrijf in!</a></td>
                                             </tr>
                                             <tr>
-                                                <td>Gemengd Recreatief</td>
+                                                <td class="wrap-class">Gemengd Recreatief</td>
                                                 <td>Alles mag in deze reeks zonder "strikte" beachvolleybal regels. Voor mensen die graag spelen voor de fun. Mannen, vrouwen, beachvolleybal lovers, maakt niet uit in welke combinatie. Veel wedstrijden spelen voor weinig geld, en de winnaar krijgt een kleine prijs!</td>
-                                                <td>35 EUR</td>
-                                                <td><a href="">Schrijf in!</a></td>
+                                                <td class="wrap-class">35 EUR</td>
+                                                <td class="wrap-class"><a href="">Schrijf in!</a></td>
                                             </tr>
                                         </tbody>
                                     </table>
