--- a/indoorbeach/13-oktober.html
+++ b/indoorbeach/13-oktober.html
@@ -54,10 +54,9 @@
 						<div class="inner">
 							<h1>Zondag 13 oktober</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
+							<p>Zondag 13 oktober spelen we in Outdoorcentrum Schaffen.</p>
 							<section>
-                                <h2>Table</h2>
-                                <h3>Default</h3>
+                                <h2>Voor welke reeksen kan ik mij inschrijven?</h2>
                                 <div class="table-wrapper">
                                     <table>
                                         <thead>
@@ -70,20 +69,20 @@
                                         </thead>
                                         <tbody>
                                             <tr>
-                                                <td class="wrap-class">Heren BEL/prov</td>
+                                                <td class="wrap-class"><strong>13u Heren BEL/prov</strong></td>
                                                 <td>Een stevige competitieve heren reeks voor spelers van Belgisch niveau en waaghalzen van divisie of provinciaal niveau. Je speelt veel wedstrijden, je kan een gratis deelname winnen voor het volgende toernooi en je kan punten verdienen voor de eindrangschikking van seizoen 2019 - 2020.</td>
                                                 <td class="wrap-class">35 EUR</td>
                                                 <td class="wrap-class"><a href="">Schrijf in!</a></td>
                                             </tr>
                                             <tr>
-                                                <td class="wrap-class">Dames BEL/prov</td>
+                                                <td class="wrap-class"><strong>13u Dames BEL/prov</strong></td>
                                                 <td>Een stevige competitieve dames reeks voor spelers van Belgisch niveau en waaghalzen van divisie of provinciaal niveau. Je speelt veel wedstrijden, je kan een gratis deelname winnen voor het volgende toernooi en je kan punten verdienen voor de eindrangschikking van seizoen 2019 - 2020.</td>
                                                 <td class="wrap-class">35 EUR</td>
                                                 <td class="wrap-class"><a href="">Schrijf in!</a></td>
                                             </tr>
                                             <tr>
-                                                <td class="wrap-class">Gemengd Recreatief</td>
-                                                <td>Alles mag in deze reeks zonder "strikte" beachvolleybal regels. Voor mensen die graag spelen voor de fun. Mannen, vrouwen, beachvolleybal lovers, maakt niet uit in welke combinatie. Veel wedstrijden spelen voor weinig geld, en de winnaar krijgt een kleine prijs!</td>
+                                                <td class="wrap-class"><strong>10u Gemengd Recreatief</strong></td>
+                                                <td>Alles mag in deze reeks zonder "strikte" beachvolleybal regels. Voor mensen die graag spelen voor de fun. Mannen, vrouwen, beachvolleybal lovers, maakt niet uit in welke combinatie. Veel wedstrijden spelen voor weinig geld en de winnaar krijgt een kleine prijs!</td>
                                                 <td class="wrap-class">35 EUR</td>
                                                 <td class="wrap-class"><a href="">Schrijf in!</a></td>
                                             </tr>
