--- a/indoorbeach/13-oktober.html
+++ b/indoorbeach/13-oktober.html
@@ -5,6 +5,11 @@
         overflow: hidden;
         text-overflow: ellipsis;
     }
+    @media screen and (max-width: 600px) {
+        .hide-mobile {
+            display: none;
+        }
+    }
 </style>
 <html>
 	<head>
@@ -56,33 +61,33 @@
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							<p>Zondag 13 oktober spelen we in Outdoorcentrum Schaffen.</p>
 							<section>
-                                <h2>Voor welke reeksen kan ik mij inschrijven?</h2>
+                                <h2>Inschrijven</h2>
                                 <div class="table-wrapper">
                                     <table>
                                         <thead>
                                             <tr>
                                                 <th>Reeks</th>
-                                                <th>Beschrijving</th>
+                                                <th class="hide-mobile">Beschrijving</th>
                                                 <th>Prijs</th>
                                                 <th>Inschrijven</th>
                                             </tr>
                                         </thead>
                                         <tbody>
                                             <tr>
-                                                <td class="wrap-class"><strong>13u Heren BEL/prov</strong></td>
-                                                <td>Een stevige competitieve heren reeks voor spelers van Belgisch niveau en waaghalzen van divisie of provinciaal niveau. Je speelt veel wedstrijden, je kan een gratis deelname winnen voor het volgende toernooi en je kan punten verdienen voor de eindrangschikking van seizoen 2019 - 2020.</td>
+                                                <td class="wrap-class">Heren BEL/prov (13u)</td>
+                                                <td class="hide-mobile">Een stevige competitieve heren reeks voor spelers van Belgisch niveau en waaghalzen van divisie of provinciaal niveau. Je speelt veel wedstrijden, je kan een gratis deelname winnen voor het volgende toernooi en je kan punten verdienen voor de eindrangschikking van seizoen 2019 - 2020.</td>
                                                 <td class="wrap-class">35 EUR</td>
                                                 <td class="wrap-class"><a href="">Schrijf in!</a></td>
                                             </tr>
                                             <tr>
-                                                <td class="wrap-class"><strong>13u Dames BEL/prov</strong></td>
-                                                <td>Een stevige competitieve dames reeks voor spelers van Belgisch niveau en waaghalzen van divisie of provinciaal niveau. Je speelt veel wedstrijden, je kan een gratis deelname winnen voor het volgende toernooi en je kan punten verdienen voor de eindrangschikking van seizoen 2019 - 2020.</td>
+                                                <td class="wrap-class"><strong>Dames BEL/prov (13u)</strong></td>
+                                                <td class="hide-mobile">Een stevige competitieve dames reeks voor spelers van Belgisch niveau en waaghalzen van divisie of provinciaal niveau. Je speelt veel wedstrijden, je kan een gratis deelname winnen voor het volgende toernooi en je kan punten verdienen voor de eindrangschikking van seizoen 2019 - 2020.</td>
                                                 <td class="wrap-class">35 EUR</td>
                                                 <td class="wrap-class"><a href="">Schrijf in!</a></td>
                                             </tr>
                                             <tr>
-                                                <td class="wrap-class"><strong>10u Gemengd Recreatief</strong></td>
-                                                <td>Alles mag in deze reeks zonder "strikte" beachvolleybal regels. Voor mensen die graag spelen voor de fun. Mannen, vrouwen, beachvolleybal lovers, maakt niet uit in welke combinatie. Veel wedstrijden spelen voor weinig geld en de winnaar krijgt een kleine prijs!</td>
+                                                <td class="wrap-class"><strong>Gemengd Recreatief (10u)</strong></td>
+                                                <td class="hide-mobile">Alles mag in deze reeks zonder "strikte" beachvolleybal regels. Voor mensen die graag spelen voor de fun. Mannen, vrouwen, beachvolleybal lovers, maakt niet uit in welke combinatie. Veel wedstrijden spelen voor weinig geld en de winnaar krijgt een kleine prijs!</td>
                                                 <td class="wrap-class">35 EUR</td>
                                                 <td class="wrap-class"><a href="">Schrijf in!</a></td>
                                             </tr>
