--- a/indoorbeach/index.html
+++ b/indoorbeach/index.html
@@ -227,8 +227,8 @@
 					<footer id="footer">
 						<div class="inner">
 							<section>
-								<h2>Get in touch</h2>
-								<form method="post" action="#">
+								<h2>Vragen? Shoot!</h2>
+								<form action="mailto:jeroensannen@hotmail.com" method="post" enctype="text/plain">
 									<div class="fields">
 										<div class="field half">
 											<input type="text" name="name" id="name" placeholder="Name" />
