--- a/indoorbeach/13-oktober.html
+++ b/indoorbeach/13-oktober.html
@@ -28,8 +28,8 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
+                                <a href="index.html" class="logo">
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Belgium Winter Beachvolley 2019 - 2020</span>
 								</a>
 
 							<!-- Nav -->
@@ -59,7 +59,7 @@
 						<div class="inner">
 							<h1>Zondag 13 oktober</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>Zondag 13 oktober spelen we in Outdoorcentrum Schaffen.</p>
+							<p>Zondag 13 oktober spelen we in <a target="_blank" href="https://goo.gl/maps/39negfTJZFMnzKGj8">Outdoorcentrum Schaffen</a>.</p>
 							<section>
                                 <h2>Inschrijven</h2>
                                 <div class="table-wrapper">
