--- a/indoorbeach/13-oktober.html
+++ b/indoorbeach/13-oktober.html
@@ -95,7 +95,7 @@
                                     </table>
                                 </div>
                             </section>
-                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf_p8zn-IRj-9XccNzvlZpfRiHiJoJVVE85UXiEiy1GpCIz1w/viewform?embedded=true" width="100%" height="auto" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf_p8zn-IRj-9XccNzvlZpfRiHiJoJVVE85UXiEiy1GpCIz1w/viewform?embedded=true" width="100%" height="1400px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 						</div>
 					</div>
 
